[risk=low][no ticket] Show both usernames and contact emails in mail server logs (#8348)
* misc refactoring for MailServiceImpl